fixup: Revert negative z-index, bump up button row margin

--- a/protocol-designer/src/components/DeckSetup/DeckSetup.css
+++ b/protocol-designer/src/components/DeckSetup/DeckSetup.css
@@ -2,7 +2,6 @@
 
 .deck_wrapper {
   flex: 1;
-  z-index: -10;
 }
 
 .deck_header {
